--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1 id = 'buttonHeader'></h1>
     <button id='postButton'></button>
-    <div id='presetResponse'></div>
+    <pre id='presetResponse'></pre>
 
     <h1 id= 'queryHeader'></h1>
     <textarea id='sql' rows="6" cols="60" placeholder=''></textarea><br>
